# RAG-System

./: README.md  pyproject.toml  requirements.txt
nootbook/: fusion_retrieval.ipynb  pdf_to_markdown.ipynb  query_transformations.ipynb
nootbook/data/: 相亲中的套路.md
