[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "dashscope>=1.25.10",
    "jupyterlab>=4.5.3",
    "jupyterlab-language-pack-zh-cn>=4.5.post1",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-docling>=2.0.0",
    "langchain-experimental>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "langchain-pymupdf4llm>=0.5.0",
    "langchain-qwq>=0.3.4",
    "langchain-text-splitters>=1.1.0",
    "python-dotenv>=1.2.1",
]
